# mercurial-dynamic-amm-sdk

dynamic-amm-quote/: Cargo.toml
dynamic-amm-quote/src/: lib.rs
dynamic-amm-quote/src/depeg/: marinade.rs
dynamic-amm-quote/src/math/: stable_swap.rs
programs/amm/: Cargo.toml
programs/amm/src/: lib.rs
programs/amm/src/depeg/: marinade.rs
programs/amm/src/math/: stable_swap.rs
programs/dynamic-amm/: Cargo.toml
programs/dynamic-amm/src/: state.rs
programs/dynamic-vault/: Cargo.toml
rust-client/: Cargo.toml
rust-client/src/: rpc.rs
