[package]
name = "mercurial-amm"
version = "0.4.9"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
staging = []
test-bpf = []
test-bpf-snapshot = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.28"
anchor-spl = "0.28"
mercurial-vault = { git = "https://github.com/jup-ag/mercurial-vault-sdk.git", rev = "86922eb15d982fadff56cf4733f6fb4ef4c935e3", features = ["no-entrypoint"] }
spl-token-swap = { version = "3.0.0", features = ["no-entrypoint"] }
meteora-stable-swap-math = { git = "https://github.com/jup-ag/stable-swap.git", rev = "c7c9a9d3b5c324695971c6121da027bfb234ab85", package = "stable-swap-math" }
meteora-stable-swap-client = { git = "https://github.com/jup-ag/stable-swap.git", rev = "c7c9a9d3b5c324695971c6121da027bfb234ab85", package = "stable-swap-client" }
marinade-sdk = { git = "https://github.com/jup-ag/marinade-sdk.git", rev = "7eab901fdac376db2a0dec9f70a89157bf1bff1a" }
spl-stake-pool = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "a3996814cb44eab2834f72113b742c875ac7b1b9", features = [
    "no-entrypoint",
] }
anyhow = "1.0.71"

[dev-dependencies]
solana-program-test = "~1.16"
solana-sdk = "~1.16"
solana-account-decoder = "~1.16"
solana-client = "~1.16"
spl-associated-token-account = { version = "2", features = ["no-entrypoint"] }
serde_json = "1.0.95"
serde = "1.0.159"
bincode = "1.3.3"
